fixed question visibility

--- a/Teamwork - RoseChampagne/style/Deal or No Deal - Style.css
+++ b/Teamwork - RoseChampagne/style/Deal or No Deal - Style.css
@@ -127,7 +127,9 @@ div#upper-part .offerFieldHidden{
     text-transform: capitalize;
     font-family: Showcard Gothic;
 }
-
+.hidden{
+	visibility:hidden;
+}
 
 /*Left side bar*/
 div#left {
